# moveit2

moveit_ros/planning_interface/: CMakeLists.txt  ConfigExtras.cmake  package.xml
moveit_ros/planning_interface/py_bindings_tools/include/moveit/py_bindings_tools/: serialize_msg.h
moveit_ros/planning_interface/py_bindings_tools/src/: roscpp_initializer.cpp
moveit_ros/planning_interface/robot_interface/: CMakeLists.txt
moveit_ros/planning_interface/robot_interface/src/: wrap_python_robot_interface.cpp
moveit_ros/planning_interface/test/: CMakeLists.txt  moveit_cpp_test.cpp  package.xml
src/move_group_python_interface/: setup.cfg  setup.py
src/move_group_python_interface/install/: local_setup.sh  setup.sh
src/move_group_python_interface/install/move_group_python_interface/lib/move_group_python_interface/: move_group
src/move_group_python_interface/install/move_group_python_interface/share/move_group_python_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/move_group_python_interface/launch/: demo.launch.py
src/move_group_python_interface/log/: latest_build
